Fix search box on mobile

--- a/resources/assets/sass/partials/mobile/navbar.scss
+++ b/resources/assets/sass/partials/mobile/navbar.scss
@@ -29,6 +29,11 @@
       #logo{
         display: none;
       }
+      
+      #search{
+        margin-top: 10px;
+        float: left;
+      }
     }
 
     ul{
